--- a/src/styles/preloader.css
+++ b/src/styles/preloader.css
@@ -3,7 +3,8 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100vh;
+    height: 100dvh;
+    min-height: -webkit-fill-available;
     background-color: var(--bg-main);
     display: flex;
     align-items: center;
